# algo-quant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_dashboard.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: MANIFEST.md
.claude/commands/: backtest.md  dashboard.md  test.md  uv-run.md  uv-sync.md
.claude/memory/: MEMORY.md
.claude/skills/: uv.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  quant_experiment_log.yml
config/: api_keys.yaml.example  settings.yaml  watchlist.yaml
config/profiles/: dev.yaml  live.yaml  paper.yaml
docs/: DATA-COLLECTION-PLAN.md  DEVELOPMENT-SCOPE.md  GITHUB_WORKFLOW.md  PRD.md  PROGRESS.md  TECH-SPEC.md
references/: MANIFEST.md  PART_01.md  PART_02.md  PART_03.md  PART_04.md  PART_05.md  PART_06.md  PART_07.md  QUANT-FINANCE-RESEARCH.md
scripts/: collect_data.py  demo_paper_trading.py  run_dashboard.py  run_pipeline.py
src/: cli.py  env.py
src/backtest/: __init__.py  engine.py  metrics.py  walk_forward.py
src/config/: __init__.py  runtime.py
src/data/: __init__.py  base_client.py  binance_client.py  cache.py  collector.py  finnhub_client.py  fmp_client.py  fred_client.py  kis_client.py  kiwoom_client.py  preprocessor.py  upbit_client.py  vix_client.py  yfinance_client.py
src/execution/: __init__.py  broker.py  executor.py  realtime.py  rebalancer.py
src/factors/: __init__.py  base.py  capm.py  ff3.py  ff5.py  ff_data.py  neutralizer.py
src/regime/: __init__.py  hmm_classifier.py  indicators.py  rule_based.py  signals.py
src/strategy/: __init__.py  factor_strategy.py  optimizer.py  (+2 more)
tests/: test_cli.py  test_env.py
(+81 files in other folders)
